--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
   },
   "homepage": "https://github.com/novemberborn/well-known-symbols#readme",
   "devDependencies": {
-    "@novemberborn/as-i-preach": "^7.0.0",
-    "ava": "^0.18.2",
+    "@novemberborn/as-i-preach": "^11.0.0",
+    "ava": "1.0.0-beta.8",
     "codecov": "^3.1.0",
-    "nyc": "^10.1.2"
+    "nyc": "^13.0.1"
   },
   "nyc": {
     "reporter": [
