--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@novemberborn/as-i-preach": "^7.0.0",
     "ava": "^0.18.2",
-    "coveralls": "^2.11.16",
+    "codecov": "^3.1.0",
     "nyc": "^10.1.2"
   },
   "nyc": {
