--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   },
   "homepage": "https://github.com/novemberborn/well-known-symbols#readme",
   "devDependencies": {
-    "ava": "1.0.0-beta.8",
+    "ava": "^3.1.0",
     "codecov": "^3.1.0",
-    "nyc": "^13.0.1",
+    "nyc": "^15.0.0",
     "standard": "^14.3.1"
   },
   "nyc": {
