--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "2.0.0",
   "description": "Check whether a symbol is well-known",
   "main": "index.js",
+  "types": "index.d.ts",
   "files": [
-    "index.js"
+    "index.js",
+    "index.d.ts"
   ],
   "engines": {
     "node": ">=10"
   },
   "scripts": {
-    "test": "standard && nyc ava"
+    "test": "standard && tsd && nyc ava"
   },
   "repository": {
     "type": "git",
@@ -37,7 +39,8 @@
   "devDependencies": {
     "ava": "^3.1.0",
     "nyc": "^15.0.0",
-    "standard": "^14.3.1"
+    "standard": "^14.3.1",
+    "tsd": "^0.11.0"
   },
   "nyc": {
     "reporter": [
