--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
 		"pretest": "npm run lint",
 		"tests-only": "nyc tape 'test/**/*.js'",
 		"test": "npm run tests-only",
-		"posttest": "aud --production"
+		"posttest": "npx npm@\">= 10.2\" audit --production"
 	},
 	"repository": {
 		"type": "git",
@@ -136,7 +136,6 @@
 	"devDependencies": {
 		"@es-shims/api": "^2.3.1",
 		"@ljharb/eslint-config": "^21.0.1",
-		"aud": "^2.0.2",
 		"auto-changelog": "^2.4.0",
 		"eslint": "=8.8.0",
 		"for-each": "^0.3.3",
