--- a/package.json
+++ b/package.json
@@ -72,6 +72,16 @@
 		"./Symbol.unscopables/polyfill": "./Symbol.unscopables/polyfill.js",
 		"./Symbol.unscopables/implementation": "./Symbol.unscopables/implementation.js",
 		"./Symbol.unscopables/shim": "./Symbol.unscopables/shim.js",
+		"./Symbol.dispose": "./Symbol.dispose/index.js",
+		"./Symbol.dispose/auto": "./Symbol.dispose/auto.js",
+		"./Symbol.dispose/polyfill": "./Symbol.dispose/polyfill.js",
+		"./Symbol.dispose/implementation": "./Symbol.dispose/implementation.js",
+		"./Symbol.dispose/shim": "./Symbol.dispose/shim.js",
+		"./Symbol.asyncDispose": "./Symbol.asyncDispose/index.js",
+		"./Symbol.asyncDispose/auto": "./Symbol.asyncDispose/auto.js",
+		"./Symbol.asyncDispose/polyfill": "./Symbol.asyncDispose/polyfill.js",
+		"./Symbol.asyncDispose/implementation": "./Symbol.asyncDispose/implementation.js",
+		"./Symbol.asyncDispose/shim": "./Symbol.asyncDispose/shim.js",
 		"./package.json": "./package.json"
 	},
 	"scripts": {
